# ludwig

./: .gitignore  Cargo.toml
src/: auth.rs  files.rs  https.rs  main.rs  ssl.rs
static/: index.js  style.css
templates/: admin.hbs  files.hbs  login.html
