[package]
name = "ludwig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = "symbols"
panic = "abort"

[dependencies]
actix-files = "0.6.0-beta.16"
actix-multipart = "0.4.0-beta.13"
actix-session = "0.5.0-beta.8"
acme2 = "0.5.0"
rustls = "0.20.2"
serde = "1.0.136"
serde_json = "1.0.78"
futures = "0.3.21"
rand = "0.8.4"
rust-argon2 = "1.0.0"

[dependencies.actix-web]
version = "4.0.0-rc.2"
features = ["rustls"]

[dependencies.handlebars]
version = "4.2.1"
features = ["dir_source"] 
