[package]
name = "ludwig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
actix-files = "0.6.0"
actix-multipart = "0.4.0"
acme2 = "0.5.0"
rustls = "0.20.4"
serde = "1.0.136"
serde_json = "1.0.79"
futures = "0.3.21"
rand = "0.8.5"
rust-argon2 = "1.0.0"

[dependencies.actix-web]
version = "4.0.1"
features = ["rustls"]

[dependencies.actix-session]
version = "0.6.2"
features = ["cookie-session"]

[dependencies.handlebars]
version = "4.2.2"
features = ["dir_source"] 
