[package]
name = "ludwig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.4.0"
acme2 = "0.5.1"
rustls = "0.20.6"
serde = "1.0.143"
serde_json = "1.0.83"
futures = "0.3.21"
rand = "0.8.5"
rust-argon2 = "1.0.0"

[dependencies.actix-web]
version = "4.1.0"
features = ["rustls"]

[dependencies.actix-session]
version = "0.7.1"
features = ["cookie-session"]

[dependencies.handlebars]
version = "4.3.3"
features = ["dir_source"] 
